Add fucker fix animation deltatime refactor